--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,8 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #fff;
+  background: #0c090a;
   padding: 10px 5%;
+  color: #fff;
 }
 
 .logo {
@@ -18,6 +19,7 @@
   margin: 10px 20px;
   color: #ffca1a;
   font-size: 25px;
+  font-weight: 700;
 }
 
 ul {
