--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,22 +17,26 @@
 
 .titleName {
   display: inline-block;
-  margin: 10px 20px;
+  margin: 10px 20px; /* 상단바 높이 수정 */
   color: #ffca1a;
   font-size: 25px;
   font-weight: 700;
+  margin-right:390px;
 }
 
-ul {
-  flex: 1;
+.navLinks{
+  display: flex;
+  flex-direction: row;
   list-style: none;
   text-align: center;
+  flex: 1;
+  margin-right: 20px;
 }
 
 ul li {
   display: inline-block;
-  margin: 10px 20px;
-  font-size: 18px;
+  font-size: 17px;
+  margin-right: 20px;
   cursor: pointer;
 }
 
@@ -40,4 +44,33 @@ a:link,
 a:visited {
   color: inherit; /* 링크 색상을 부모 엘리먼트의 color 값으로 상속 */
   text-decoration: none; /* 밑줄 제거 */
+}
+
+/* 화면 작아졌을 때 크기 조정 */
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    text-align: center;
+    padding: 10px; 
+  }
+
+  .titleName {
+    margin: 10px 0;
+  }
+
+  .navLinks {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    text-align: center;
+    flex: 1;
+    margin-right: 20px;
+  }
+
+  ul li {
+    display: inline-block;
+    font-size: 17px;
+    margin-right: 10px;
+    cursor: pointer;
+  }
 }
