🐛solve bug when delete reservation

--- a/src/pages/check/CheckRoom.css
+++ b/src/pages/check/CheckRoom.css
@@ -6,4 +6,12 @@
     #popover{
         padding-left: 20%;
     }
+
+    .modal-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 16px;
+    }
 }
