✨회원가입 페이지 생성

--- a/src/pages/login/LoginPage.css
+++ b/src/pages/login/LoginPage.css
@@ -1,7 +1,4 @@
-#form {
-  width: 100vw;
-  height: auto;
-}
+
 
 @media (min-width: 768px) {
   #form {
@@ -12,16 +9,9 @@
   }
 }
 
-.inputContainer,
-.buttonContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .textInput,
 #btn {
   width: calc(100% - 2rem);
   max-width: 400px;
-  margin: 0.5rem 0; /* 상하단에 일정 간격을 추가합니다 */
+  margin: 0.5rem 0;
 }
